/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
}

group = 'org.example'
version = '1.0-SNAPSHOT'
description = 'Soliloquy Graphics Module'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

repositories {
    flatDir {
        dirs("lib")
    }
    mavenLocal()
    maven {
        url = uri('https://maven.pkg.github.com/felix-t-morgenstern/inaugural.soliloquy.tools')
    }

    maven {
        url = uri('https://raw.githubusercontent.com/felix-t-morgenstern/soliloquy.artifacts/master/')
    }

    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    implementation "disorg.soliloquy:soliloquy.specs:0.0.539"
    implementation "disorg.soliloquy:inaugural.soliloquy.tools:0.0.149"
    implementation "disorg.soliloquy:inaugural.soliloquy.common:0.0.20"

    implementation 'com.google.inject:guice:5.1.0'
    // https://mvnrepository.com/artifact/com.google.code.gson/gson
    implementation("com.google.code.gson:gson:2.13.1")
    // https://mvnrepository.com/artifact/org.javatuples/javatuples
    implementation("org.javatuples:javatuples:1.2")
    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
    implementation("org.apache.commons:commons-lang3:3.17.0")
    // https://mvnrepository.com/artifact/com.conversantmedia/rtree
    implementation("com.conversantmedia:rtree:1.0.5")

    implementation fileTree(dir: 'lib', include: ['*.jar'])

    // https://mvnrepository.com/artifact/org.mockito/mockito-core
    testImplementation("org.mockito:mockito-core:5.17.0")
    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
    testImplementation("org.junit.jupiter:junit-jupiter-engine:5.12.2")
    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
    testImplementation("org.junit.jupiter:junit-jupiter-api:5.12.2")
    // https://mvnrepository.com/artifact/org.junit.platform/junit-platform-launcher
    testImplementation("org.junit.platform:junit-platform-launcher:1.12.2")
    // https://central.sonatype.com/artifact/org.mockito/mockito-junit-jupiter
    testImplementation("org.mockito:mockito-junit-jupiter:5.17.0")
}

test {
    useJUnitPlatform()
}

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}
